--- a/style.css
+++ b/style.css
@@ -13,12 +13,6 @@ body {
     background-position: center;
 }
 
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .input-style {
     width: 350px;
     padding: 4px 16px;
@@ -32,6 +26,28 @@ main {
     border-radius: 16px;
 } 
 
+.special-color{
+    color: rgb(51, 51, 51);
+}
+
+.btn-style{
+    width: 350px;
+    margin-top: 16px;
+    padding: 10px 16px;
+    font-size: 1.2rem;
+    text-align: center;
+    background: transparent;
+    backdrop-filter: blur(16px);
+    color: white;
+    border: none;
+    border: 1px rgba(255,255,255,.5) solid;
+    border-radius: 16px;
+}
+.btn-style:hover{
+    cursor:pointer;
+    background-color: black;
+}
+
 .form-flex {
     display: flex;
     justify-content: space-between;
@@ -39,15 +55,23 @@ main {
     margin: 4px 0px;
     padding: 0px 32px;
 }
+#centrar{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #contenedorPrincipal {
     width: 50%;
-    height: auto;
-    margin: 128px auto;
+
     padding: 32px 16px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 
     background-color: rgba(0,0,0,.4);
     border-radius: 16px;
@@ -80,9 +104,11 @@ header {
     color: white;
     padding: 16px 32px;
 
-    position: relative;
+    position: sticky;
+    width: 100%;
     top: 25;
     left: 0;
+    z-index: 99;
 
     display: flex;
     justify-content: space-between;
@@ -118,10 +144,21 @@ li a:hover{
     font-style: italic;
 }
 .warn{
-    color:rgb(217, 217, 217);
+    color:rgb(255, 255, 255);
     font-size: 0.8rem;
     background-color: rgba(0,0,0,0.2);
     padding: 4px;
     margin: 4px 0px;
     border-radius: 4px;
+}
+
+footer {
+    width: 100%;
+    height: 400px;
+    background-color: black;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
 }
